<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/specialTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F9FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        tools:context=".main.ui.RegisterDoctor">

        <!-- title of page -->
        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart='150dp'
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/Title"
            android:textAlignment="viewEnd"
            android:textColor="@color/light_blue"
            android:textSize="40sp" />

        <!-- Fill for first name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/FirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FirstName"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Last name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LastName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Email name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Fill for Password name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Phone Number name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PhoneNumber" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Address number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Address street-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Street" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Address city-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Province/Territory-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ProviTeri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ProvTeri" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Fill for Employee Number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employeeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/EmployeeNumber" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/editTextText"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:selectAllOnFocus="false"
            android:text="@string/specialTitle"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="40sp"
            android:id="@+id/specialties">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/anes"
                android:id="@+id/selection1">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/cardi"
                android:id="@+id/selection2">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/emer"
                android:id="@+id/selection3">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/fami"
                android:id="@+id/selection4">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/gast"
                android:id="@+id/selection5">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/gene"
                android:id="@+id/selection6">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/geri"
                android:id="@+id/selection7">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/inte"
                android:id="@+id/selection8">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/neul"
                android:id="@+id/selection9">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/onc"
                android:id="@+id/selection10">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/pedi"
                android:id="@+id/selection11">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/psyc"
                android:id="@+id/selection12">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/radi"
                android:id="@+id/selection13">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:text="@string/urol"
                android:id="@+id/selection14">
            </com.google.android.material.chip.Chip>

        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue"
                android:onClick="submitOnClick"
                android:text="Submit"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>